# LTBL2

./: .gitignore  CMakeLists.txt  LICENSE.md  LetThereBeLight.cpp  LetThereBeLight.hpp  README.md
doc/: Doxyfile
docs/: _let_there_be_light_8hpp_source.html  classltbl_1_1_light_direction_emission.html  classltbl_1_1_light_point_emission.html  classltbl_1_1_light_shape.html  classltbl_1_1_light_system-members.html  classltbl_1_1_light_system.html  classltbl_1_1_light_system.js  classltbl_1_1priv_1_1_base_light.html  classltbl_1_1priv_1_1_quadtree.html  classltbl_1_1priv_1_1_quadtree_occupant.html  functions.html  md__l_i_c_e_n_s_e.html  md__r_e_a_d_m_e.html  navtreedata.js  navtreeindex0.js  pages.html  structltbl_1_1priv_1_1_penumbra.html
docs/search/: all_3.js  all_6.js  pages_0.js
examples/: main.cpp
source/: LightSystem.cpp
src/: BaseLight.cpp  BaseLight.hpp  LightDirectionEmission.cpp  LightDirectionEmission.hpp  LightPointEmission.cpp  LightPointEmission.hpp  LightResources.hpp  LightShape.cpp  LightShape.hpp  LightSystem.cpp  LightSystem.hpp  Math.cpp  Math.hpp  NormalSprite.cpp  NormalSprite.hpp  Quadtree.cpp  Quadtree.hpp  Utils.hpp
